// <auto-generated />
using System;
using GlobalSolution.SenseSpot.API.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Oracle.EntityFrameworkCore.Metadata;

#nullable disable

namespace GlobalSolution.SenseSpot.API.Migrations
{
    [DbContext(typeof(AppDbContext))]
    partial class AppDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.6")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            OracleModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Alert", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<int>("IsAcknowledged")
                        .HasColumnType("NUMBER(1)");

                    b.Property<string>("Message")
                        .IsRequired()
                        .HasMaxLength(240)
                        .HasColumnType("NVARCHAR2(240)");

                    b.Property<int?>("SensorReadingId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<int>("Severity")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("TriggeredAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId");

                    b.ToTable("Alerts");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Device", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("BatteryLevel")
                        .HasColumnType("NUMBER(10)");

                    b.Property<int>("ConnectionStatus")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<string>("EnvironmentContext")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("NVARCHAR2(80)");

                    b.Property<int>("IsActive")
                        .HasColumnType("NUMBER(1)");

                    b.Property<DateTime?>("LastReadingAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("NVARCHAR2(120)");

                    b.Property<string>("SerialNumber")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("NVARCHAR2(80)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.HasKey("Id");

                    b.HasIndex("SerialNumber")
                        .IsUnique();

                    b.ToTable("Devices");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.DeviceConfiguration", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<decimal>("AirQualityAlertThreshold")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.Property<int>("CollectionIntervalSeconds")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<decimal>("HumidityAlertThreshold")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.Property<decimal>("LuminosityAlertThreshold")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.Property<int>("OperationMode")
                        .HasColumnType("NUMBER(10)");

                    b.Property<decimal>("TemperatureAlertThreshold")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<decimal>("VibrationAlertThreshold")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId")
                        .IsUnique();

                    b.ToTable("DeviceConfigurations");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.RiskAssessment", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("AssessedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("Classification")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<string>("PrimaryRiskFactors")
                        .IsRequired()
                        .HasMaxLength(240)
                        .HasColumnType("NVARCHAR2(240)");

                    b.Property<string>("RecommendedAction")
                        .IsRequired()
                        .HasMaxLength(240)
                        .HasColumnType("NVARCHAR2(240)");

                    b.Property<string>("Summary")
                        .IsRequired()
                        .HasMaxLength(600)
                        .HasColumnType("NVARCHAR2(600)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId");

                    b.ToTable("RiskAssessments");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Sensor", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<int>("IsActive")
                        .HasColumnType("NUMBER(1)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("NVARCHAR2(120)");

                    b.Property<int>("SensorType")
                        .HasColumnType("NUMBER(10)");

                    b.Property<string>("Unit")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("NVARCHAR2(30)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId");

                    b.ToTable("Sensors");

                    b.HasDiscriminator<int>("SensorType");

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.SensorReading", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("ConnectionStatusAtCollection")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<int>("IsSynced")
                        .HasColumnType("NUMBER(1)");

                    b.Property<DateTime>("ReceivedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<DateTime>("RecordedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("SensorId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<decimal>("Value")
                        .HasPrecision(10, 2)
                        .HasColumnType("DECIMAL(10,2)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId");

                    b.HasIndex("SensorId");

                    b.ToTable("SensorReadings");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.SyncLog", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("NUMBER(10)");

                    OraclePropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("NVARCHAR2(80)");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<string>("Details")
                        .IsRequired()
                        .HasMaxLength(240)
                        .HasColumnType("NVARCHAR2(240)");

                    b.Property<int>("DeviceId")
                        .HasColumnType("NUMBER(10)");

                    b.Property<DateTime>("OccurredAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.Property<int>("PendingReadingsCount")
                        .HasColumnType("NUMBER(10)");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("NVARCHAR2(80)");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .HasColumnType("TIMESTAMP(7)");

                    b.HasKey("Id");

                    b.HasIndex("DeviceId");

                    b.ToTable("SyncLogs");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.AirQualitySensor", b =>
                {
                    b.HasBaseType("GlobalSolution.SenseSpot.API.Models.Sensor");

                    b.HasDiscriminator().HasValue(4);
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.HumiditySensor", b =>
                {
                    b.HasBaseType("GlobalSolution.SenseSpot.API.Models.Sensor");

                    b.HasDiscriminator().HasValue(2);
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.LuminositySensor", b =>
                {
                    b.HasBaseType("GlobalSolution.SenseSpot.API.Models.Sensor");

                    b.HasDiscriminator().HasValue(3);
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.TemperatureSensor", b =>
                {
                    b.HasBaseType("GlobalSolution.SenseSpot.API.Models.Sensor");

                    b.HasDiscriminator().HasValue(1);
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.VibrationSensor", b =>
                {
                    b.HasBaseType("GlobalSolution.SenseSpot.API.Models.Sensor");

                    b.HasDiscriminator().HasValue(5);
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Alert", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithMany("Alerts")
                        .HasForeignKey("DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Device");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.DeviceConfiguration", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithOne("Configuration")
                        .HasForeignKey("GlobalSolution.SenseSpot.API.Models.DeviceConfiguration", "DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Device");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.RiskAssessment", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithMany("RiskAssessments")
                        .HasForeignKey("DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Device");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Sensor", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithMany("Sensors")
                        .HasForeignKey("DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Device");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.SensorReading", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithMany("SensorReadings")
                        .HasForeignKey("DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Sensor", "Sensor")
                        .WithMany("Readings")
                        .HasForeignKey("SensorId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Device");

                    b.Navigation("Sensor");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.SyncLog", b =>
                {
                    b.HasOne("GlobalSolution.SenseSpot.API.Models.Device", "Device")
                        .WithMany("SyncLogs")
                        .HasForeignKey("DeviceId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Device");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Device", b =>
                {
                    b.Navigation("Alerts");

                    b.Navigation("Configuration");

                    b.Navigation("RiskAssessments");

                    b.Navigation("SensorReadings");

                    b.Navigation("Sensors");

                    b.Navigation("SyncLogs");
                });

            modelBuilder.Entity("GlobalSolution.SenseSpot.API.Models.Sensor", b =>
                {
                    b.Navigation("Readings");
                });
#pragma warning restore 612, 618
        }
    }
}
